@@ -26,10 +26,23 @@ public class RevisionUpdate {
 
   private final String instanceName;
   private final List<SVNLogEntry> logEntries;
+  private boolean flushAfterUpdate;
+  private boolean clearCacheBeforeUpdate;
 
-  public RevisionUpdate(final String instanceName, final List<SVNLogEntry> logEntries) {
+  /**
+   * Constructor.
+   *
+   * @param instanceName           Instance name
+   * @param logEntries             The new log entries
+   * @param flushAfterUpdate       If <tt>true</tt>, caches will be flushed after update.
+   * @param clearCacheBeforeUpdate Clear cache before update, to make sure we don't get duplicates.
+   */
+  public RevisionUpdate(final String instanceName, final List<SVNLogEntry> logEntries, final boolean flushAfterUpdate,
+                        final boolean clearCacheBeforeUpdate) {
     this.instanceName = instanceName;
     this.logEntries = logEntries;
+    this.flushAfterUpdate = flushAfterUpdate;
+    this.clearCacheBeforeUpdate = clearCacheBeforeUpdate;
   }
 
   /**
@@ -48,6 +61,24 @@ public class RevisionUpdate {
    */
   public String getInstanceName() {
     return instanceName;
+  }
+
+  /**
+   * Gets the flush-after-update status.
+   *
+   * @return If <tt>true</tt>, caches must be flushed after update.
+   */
+  public boolean isFlushAfterUpdate() {
+    return flushAfterUpdate;
+  }
+
+  /**
+   * Gets the clearCacheBeforeUpdate status.
+   *
+   * @return If <tt>true</tt>, caches must be cleared before update.
+   */
+  public boolean isClearCacheBeforeUpdate() {
+    return clearCacheBeforeUpdate;
   }
 
 }
